# MindMeet-PADB

./: .env.template  .gitignore  README.md  USECASES.md  main.py  pyproject.toml  pytest.ini
app/: main.py  utils.py
app/database/: connection.py  sqls.py
app/routes/: agenda.py  appointment.py  request_appointment.py  user.py  users.py
app/schemas/: agenda.py  appoiment.py  appointment.py  user.py  users.py
app/tests/: conftest.py
app/tests/schemas/: test_agenda_schema.py  test_appoiment_schema.py
app/tests/usecases/: appointment.py  test_agenda.py  test_appoiment_usercase.py  test_users_usecase.py
app/usecases/: agenda.py  agenda_day_hour.py  appoiments.py  appointment.py  base.py  request_appointment.py  user.py  users.py
ui/: main.py  menu.py
